# vscode-autoproj

./: .gitignore  .gitpod.yml  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  TODO.md  coverconfig.json  package-lock.json  package.json  tsconfig.json  tslint.json
.autoproj-workspace/: sample.code-workspace
.autoproj-workspace/sample/: autoproj.gemfile  bootstrap.sh  seed-config.yml
.autoproj-workspace/sample/src/sample_cpp/: CMakeLists.txt  manifest.xml
.autoproj-workspace/sample/src/sample_cpp/src/: Sample.cpp  Sample.hpp  main.cpp
.autoproj-workspace/sample/src/sample_cpp/test/: test_sample_cpp.cpp
.autoproj-workspace/sample/src/sample_lib/: CMakeLists.txt
.autoproj-workspace/sample/src/sample_lib/include/sample_lib/: SampleLib.hpp
.autoproj-workspace/sample/src/sample_lib/src/: SampleLib.cpp
.autoproj-workspace/sample/src/sample_lib/test/: test_sample_lib.cpp
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.test-workspace/: test-workspace.code-workspace
src/: autoproj.ts  bundleWatcher.ts  commands.ts  compilationDatabase.ts  configManager.ts  context.ts  coverage.ts  cpptools.ts  extension.ts  fileWatcher.ts  logging.ts  progress.ts  shimsWriter.ts  tasks.ts  testMate.ts  testMateApi.ts  util.ts  watcher.ts  workspaceWatcher.ts  wrappers.ts
src/autoproj/: info.ts  (+5 more)
test/: autoproj.test.ts  bundleWatcher.test.ts  commands.test.ts  compilationDatabase.test.ts  configManager.test.ts  context.test.ts  coverage.test.ts  cpptools.test.ts  extension.test.ts  fileWatcher.test.ts  handler.test.ts  helpers.ts  hooks.ts  index.ts  logging.test.ts  mocks.ts  progress.test.ts  runTest.ts  shimsWriter.test.ts  sourceMap.ts  tasks.test.ts  using.test.ts  using.ts  util.test.ts  watcher.test.ts  workspaceWatcher.test.ts
(+43 files in other folders)
